converted BackTestResult class into record